--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ main {
 
 .caja-principal {
     position:relative;
-    top:80px;
-    left:500px;
-    width:230px;
-    height:380px;
-    border-radius: 10px;
-    border: #CCFEF4 1px solid;
+    top:10px;
+    left:380px;
+    width:320px;
+    height:550px;
+    border-radius: 20px;
+    border: lightblue 1px solid;
     background : #E9FEFA;
     text-align: center;
         
@@ -27,30 +27,32 @@ h1 {
 .caja-artistas {
     display: grid;
     grid-gap: 10px 10px;
-    grid-template-columns: 55px 55px 55px; 
+    grid-template-columns: 85px 85px 85px; 
     justify-content: center;
-                  
+    
 }
 
 article {
+    padding-top: 5px;
     border-radius: 5px;
     background : #0BD8B3;
-    width:55px;
-    height:55px;
+    width:85px;
+    height:85px;
     
 }
 
 img {
-    width: 35px;
-    height: 35px;
+    width: 55px;
+    height: 55px;
     border-radius: 50%;
+    padding: 20;
     
 }
 
 .nombre-artista {
     color: white;
-    font-size:8px;
+    font-size:10px;
     font-family:Courier;
-    
+       
     
 }
